Swap to a pod_template capturing all the complex crap
Kustomize can rewrite configs generated using config map and secret
generators correctly when specified via a PodTemplate. This allows
existing tooling to be used to specify whatever should be run at some
point, but the controller can own spawning of a job with generateName
which kustomize cannot do. This seems to feel a little bit better.

--- a/deploymenthook.example.yaml
+++ b/deploymenthook.example.yaml
@@ -8,19 +8,5 @@ spec:
   selector:
     labels:
       apps.mx.com/deploymenthook: finished
-  containers:
-    - name: haproxy
-      command:
-        - "sh"
-        - "-c"
-        - |
-          echo "Hi there!"
-    - name: nginx
-      command:
-        - "sh"
-        - "-c"
-        - |
-          echo "Running migrations..."
-          echo "Stopping istio..."
-          curl -sf -XPOST http://127.0.0.1:15020/quitquitquit
-          echo "Done"
+  template:
+    name: nginx-pod-template
