--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ serde_json = "1.0"
 serde_yaml = "0.8"
 schemars = "0.8"
 
-k8s-openapi = { version = "0.13", default-features = false, features = ["v1_17"] } # Kube-rs depends on k8s-openapi
+k8s-openapi = { version = "0.13", default-features = false, features = ["v1_17", "schemars"] } # Kube-rs depends on k8s-openapi
 kube = { version = "0.65", default-features = true, features = ["derive"] } # Library for talking to Kubernetes API
 kube-runtime = "0.65"
