--- a/deploymenthooks.apps.mx.com.yaml
+++ b/deploymenthooks.apps.mx.com.yaml
@@ -3,6 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: deploymenthooks.apps.mx.com
+  namespace: default
 spec:
   group: apps.mx.com
   names:
