--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,8 @@ variables:
 
 build-feature:
   only:
-    - pipelines
+    - branches
+  when: manual
   before_script:
     - docker login -u gitlabci -p "{JWT}${CI_JOB_JWT}" $MX_REGISTRY
   script:
