--- a/docbot-controller/Cargo.toml
+++ b/docbot-controller/Cargo.toml
@@ -15,7 +15,7 @@ serde_yaml = "0.8"
 tokio = { version = "1.15.0", features = ["full"] }
 sha2 = "0.10"
 tracing = "0.1"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3", default-features = false, features = ["alloc"] }
 
 [build-dependencies]
 docbot-crd = { path = "../docbot-crd" }
