--- a/docbot-crd/Cargo.toml
+++ b/docbot-crd/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.19"
 k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_17", "schemars"] } # Kube-rs depends on k8s-openapi
 kube = { version = "0.71.0", default-features = true, features = ["derive"] } # Library for talking to Kubernetes API
 kube-runtime = "0.71.0"
@@ -13,3 +14,4 @@ schemars = "0.8"
 serde = "1"
 serde_json = "1.0"
 tracing = "0.1"
+tokio = { version = "1.15.0", features = ["full"] }
