--- a/docbot-controller/Cargo.toml
+++ b/docbot-controller/Cargo.toml
@@ -14,6 +14,8 @@ serde = "1"
 serde_yaml = "0.8"
 tokio = { version = "1.15.0", features = ["full"] }
 sha2 = "0.10"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 [build-dependencies]
 docbot-crd = { path = "../docbot-crd" }
