Fix the gilab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,12 @@ variables:
   ARTIFACTORY_URL: "https://docker-local.artifactory.internal.mx/"
 
 build-feature:
-  only:
-    - branches
-  when: manual
+  rules:
+  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    when: never
+  - if: $CI_COMMIT_MESSAGE =~ /BUILD_FEATURE_BRANCH/i
+    when: always
+  - when: manual
   before_script:
     - docker login -u gitlabci -p "{JWT}${CI_JOB_JWT}" $MX_REGISTRY
   script:
@@ -30,18 +33,3 @@ build:
   script:
     - docker build -t "$IMG" .
     - docker push "$IMG"
-
-build-on-commit:
-  before_script:
-    - docker login -u gitlabci -p "{JWT}${CI_JOB_JWT}" $MX_REGISTRY
-  script:
-    - docker build -t "$IMG" .
-    - docker push "$IMG"
-  only:
-    variables:
-      - $CI_COMMIT_MESSAGE =~ /BUILD_FEATURE_BRANCH/i
-    refs:
-      - branches
-  except:
-    variables:
-      - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
